--- a/starter-template/show_all.html
+++ b/starter-template/show_all.html
@@ -30,7 +30,7 @@
     <!-- <li class="divider"></li> --->
 </ul>
 
-<nav class="deep-orange lighten" role="navigation">
+<nav class="yellow lighten" role="navigation">
 
     <div class="nav-wrapper container">
 
@@ -60,7 +60,7 @@
 
 
 
-<footer class="page-footer deep-orange">
+<footer class="page-footer yellow">
 
     <div class="footer-copyright">
 
