--- a/starter-template/sign_in.html
+++ b/starter-template/sign_in.html
@@ -45,20 +45,20 @@
   </nav>
 
 
-  <div class="section ">
+  <div class="section">
         <br><br>
         <h5 class="white-text light"> Please login into your account</h5>
           <div class="container">
             <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
 
               <form class="col s12" method="post">
-                <div class='row'>
-                  <div class='col s12'>
+                <div class="row">
+                  <div class="col s12">
                   </div>
                 </div>
 
-                <div class='row'>
-                  <div class='input-field col s12'>
+                <div class="row">
+                  <div class="input-field col s12">
                     <i class="material-icons prefix deep-orange-text">email</i>
                     <input class='validate' type='email' name='email' id='email' />
                     <label for='email'>Enter your email</label>
