--- a/search_res.html
+++ b/search_res.html
@@ -10,24 +10,10 @@
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
-    <script>
-       /* // Called on body's `onload` event
-        function init() {
-            // Retrieving the text input's value which was stored into localStorage
-            var search = localStorage.getItem("search");
-
-            // Writing the value in the document
-            document.write("passed value = "+ search);
-            console.log("In HTML");
-            console.log(search);
-        }
-    */
-    </script>
-
 </head>
 
 
-<body class="blue-grey darken-4" >
+<body class="blue-grey darken-4">
 
 <!-- Dropdown Structure -->
 
@@ -37,11 +23,12 @@
     <!-- <li class="divider"></li> --->
 </ul>
 
-<nav class="yellow lighten" role="navigation">
+<nav class="deep-orange lighten" role="navigation">
 
     <div class="nav-wrapper container">
 
-        <a href="index.html" class="brand-logo"> <img src="content/springe.png" height=auto style="max-width:65px"/> </a>
+        <a href="index.html" class="brand-logo"> <img src="content/springe.png" height=auto style="max-width:65px"/>
+        </a>
 
         <ul class="right hide-on-med-and-down">
             <li><a href="search_res.html"><i class="material-icons blue-grey-text">search</i></a></li>
@@ -49,7 +36,7 @@
             <!-- <li><a href="#3"><i class="material-icons">refresh</i></a></li> -->
             <li>
                 <a class="dropdown-button blue-grey-text" href="#" data-activates="dropdown1">Login or Register
-                <i class="material-icons right blue-grey-text">arrow_drop_down</i></a></li>
+                    <i class="material-icons right blue-grey-text">arrow_drop_down</i></a></li>
         </ul>
 
         <ul id="nav-mobile" class="side-nav">
@@ -58,20 +45,20 @@
             <li> <a href="#"><i class="material-icons">more_vert</i></a></li>
             -->
         </ul>
-        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons blue-grey-text">menu</i></a>
+        <a href="#" data-activates="nav-mobile" class="button-collapse"><i
+                class="material-icons blue-grey-text">menu</i></a>
     </div>
 </nav>
 
 
-
 <div class="parallax-container">
-    <div class="parallax"> <img src="content/image2.jpg" ></div>
+    <div class="parallax"><img src="content/image2.jpg"></div>
 </div>
 
 <div class="section blue-grey darken-4">
     <div class="row container">
 
-        <h4 class="yellow-text lighten-1 thin light center"> Your next binge thing... </h4>
+        <h4 class="deep-orange-text lighten-1 thin light center"> Your next binge thing... </h4>
 
 
         <section id="finfo">
@@ -79,14 +66,14 @@
         </section>
 
         <div class="carousel">
-            <a class="carousel-item" id ="first" href="#modal1"> </a>
-            <a class="carousel-item" id ="second" href="#modal1"> ></a>
-            <a class="carousel-item" id ="third" href="#modal1"></a>
-            <a class="carousel-item" id ="fourth" href="#modal1"></a>
-            <a class="carousel-item" id ="fifth" href="#modal1"></a>
-            <a class="carousel-item" id ="sixth" href="#modal1"></a>
-            <a class="carousel-item" id ="seventh" href="#modal1"></a>
-            <a class="carousel-item" id ="eigth" href="#modal1"></a>
+            <a class="carousel-item" id="first" href="#modal1"> </a>
+            <a class="carousel-item" id="second" href="#modal1"> ></a>
+            <a class="carousel-item" id="third" href="#modal1"></a>
+            <a class="carousel-item" id="fourth" href="#modal1"></a>
+            <a class="carousel-item" id="fifth" href="#modal1"></a>
+            <a class="carousel-item" id="sixth" href="#modal1"></a>
+            <a class="carousel-item" id="seventh" href="#modal1"></a>
+            <a class="carousel-item" id="eigth" href="#modal1"></a>
         </div>
 
         <br>
@@ -100,7 +87,7 @@
 </div>
 
 <div class="parallax-container">
-    <div class="parallax"><img src="content/image1.jpg" ></div>
+    <div class="parallax"><img src="content/image1.jpg"></div>
 </div>
 
 
@@ -110,18 +97,20 @@
 
     </div>
     <div class="modal-footer blue-grey darken-4 white-text">
-        <a href="#!" class="btn-floating btn-large waves-effect waves-light yellow"><i class="material-icons">add</i></a>
+        <a href="#!" class="btn-floating btn-large waves-effect waves-light deep-orange"><i
+                class="material-icons">add</i></a>
 
         <!--  Thumbs up or down... ?
         <a href="#!" class="btn-floating btn-large waves-effect waves-light green center"><i class="material-icons">thumb_up</i></a>
         <a href="#!" class="btn-floating btn-large waves-effect waves-light red center"><i class="material-icons">thumb_down</i></a>
       -->
-        <a href="#!" class="btn-floating btn-large waves-effect waves-light green left"><i class="material-icons">check</i></a>
+        <a href="#!" class="btn-floating btn-large waves-effect waves-light green left"><i
+                class="material-icons">check</i></a>
     </div>
 </div>
 
 
-<footer class="page-footer yellow">
+<footer class="page-footer deep-orange">
 
     <div class="footer-copyright">
         <div class="container black-text ">
@@ -132,12 +121,10 @@
 </footer>
 
 
-
 <!--  Scripts-->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="js/materialize.js"></script>
 <script src="js/init.js"></script>
-
 
 
 </body>
