Improve file structure

--- a/login/sign_up.html
+++ b/login/sign_up.html
@@ -7,8 +7,8 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 
 
@@ -25,12 +25,12 @@
 
     <div class="nav-wrapper container">
 
-      <a href="index.html" class="brand-logo "> <img src="content/logo_white.png" height=auto style="max-width:65px"/> </a>
+      <a href="../index.html" class="brand-logo "> <img src="../content/logo_white.png" height=auto style="max-width:65px"/> </a>
 
       <ul class="right hide-on-med-and-down">
-        <li><a href="search_res.html"><i class="material-icons">search</i></a></li>
+        <li><a href="../search_res.html"><i class="material-icons">search</i></a></li>
         <li><a href="#2"><i class="material-icons">view_module</i></a></li>
-        <li><a href="my_page.html"><i class="material-icons">account_circle</i></a></li>
+        <li><a href="../my_page.html"><i class="material-icons">account_circle</i></a></li>
         <!--
         <li><a class="dropdown-button" href="#" data-activates="dropdown1">Login or Register<i class="material-icons right">arrow_drop_down</i></a></li>
         -->
@@ -125,8 +125,8 @@
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/jquery.validate.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+  <script src="../js/materialize.js"></script>
+  <script src="../js/init.js"></script>
 
   </body>
 </html>
