--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 <!-- Dropdown Structure  -->
 <ul id="dropdown1" class="dropdown-content">
-    <li><a href="sign_in.html">Sign in</a></li>
-    <li><a href="sign_up.html">Sign up</a></li>
+    <li><a href="login/sign_in.html">Sign in</a></li>
+    <li><a href="login/sign_up.html">Sign up</a></li>
     <!-- <li class="divider"></li> --->
 </ul>
 
