Change color and restore color palette.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
@@ -26,14 +27,13 @@
 
     <div class="nav-wrapper container">
 
-        <a href="index.html" class="brand-logo "> <img src="content/logo_btn.png" height=auto style="max-width:40px"/>
-        </a>
+        <a href="index.html" class="brand-logo "> <img src="content/logo_btn.png" height=auto style="max-width:40px"/> </a>
 
         <ul class="right hide-on-med-and-down ">
-            <li><a href="search_res.html"><i class="material-icons blue-grey-text">search</i></a></li>
-            <li><a href="#2"><i class="material-icons blue-grey-text">view_module</i></a></li>
-            <li><a class="dropdown-button blue-grey-text" href="#" data-activates="dropdown1">Login or Register<i
-                    class="material-icons right blue-grey-text">arrow_drop_down</i></a></li>
+            <li><a href="search_res.html"><i class="material-icons white-text">search</i></a></li>
+            <li><a href="#2"><i class="material-icons white-text">view_module</i></a></li>
+            <li><a class="dropdown-button white-text" href="#" data-activates="dropdown1">Login or Register<i
+                    class="material-icons right white-text">arrow_drop_down</i></a></li>
         </ul>
 
         <ul id="nav-mobile" class="side-nav ">
@@ -62,17 +62,16 @@
 
 
             <div class="input-field white">
-                <label class="label-icon deep-orange-text" for="search"> <i class="material-icons blue-grey-text">
+                <label class="label-icon " for="search"> <i class="material-icons blue-grey-text">
                     search</i> </label>
                 <input id="search" type="search" name="series" size="100"
                        placeholder=" What are you currently binging?"/>
             </div>
 
-            <a id="showthem" class="waves-effect deep-orange waves-deep-orange light btn blue-grey-text"> Search </a>
+            <a id="showthem" class="waves-effect deep-orange waves-deep-orange light btn white-text"> Search </a>
 
 
             <br><br>
-
 
         </div>
 
@@ -128,7 +127,7 @@
 
     <div class="footer-copyright">
 
-        <div class="container black-text">
+        <div class="container white-text">
             © 2017 Copyright
             <a class="black-text text-lighten-3 right"> </a>
         </div>
