--- a/search_res.html
+++ b/search_res.html
@@ -3,10 +3,11 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-    <title>Starter Template - Materialize</title>
+    <title>Springe</title>
 
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
@@ -27,16 +28,15 @@
 
     <div class="nav-wrapper container">
 
-        <a href="index.html" class="brand-logo"> <img src="content/springe.png" height=auto style="max-width:65px"/>
-        </a>
+        <a href="index.html" class="brand-logo "> <img src="content/logo_btn.png" height=auto style="max-width:40px"/> </a>
 
         <ul class="right hide-on-med-and-down">
-            <li><a href="search_res.html"><i class="material-icons blue-grey-text">search</i></a></li>
-            <li><a href="#2"><i class="material-icons blue-grey-text">view_module</i></a></li>
+            <li><a href="search_res.html"><i class="material-icons white-text">search</i></a></li>
+            <li><a href="#2"><i class="material-icons white-text">view_module</i></a></li>
             <!-- <li><a href="#3"><i class="material-icons">refresh</i></a></li> -->
             <li>
-                <a class="dropdown-button blue-grey-text" href="#" data-activates="dropdown1">Login or Register
-                    <i class="material-icons right blue-grey-text">arrow_drop_down</i></a></li>
+                <a class="dropdown-button white-text" href="#" data-activates="dropdown1">Login or Register
+                    <i class="material-icons right white-text">arrow_drop_down</i></a></li>
         </ul>
 
         <ul id="nav-mobile" class="side-nav">
@@ -58,7 +58,7 @@
 <div class="section blue-grey darken-4">
     <div class="row container">
 
-        <h4 class="deep-orange-text lighten-1 thin light center"> Your next binge thing... </h4>
+        <h4 class="white-text lighten-1 thin light center"> Your next binge thing... </h4>
 
 
         <section id="finfo">
@@ -113,7 +113,7 @@
 <footer class="page-footer deep-orange">
 
     <div class="footer-copyright">
-        <div class="container black-text ">
+        <div class="container white-text ">
             © 2017 Copyright Text
             <a class="orange-text text-lighten-3 right"> </a>
         </div>
