Fix minor css beatify issues

--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
 <ul id="dropdown1" class="dropdown-content">
     <li><a href="login/sign_in.html">Sign in</a></li>
     <li><a href="login/sign_up.html">Sign up</a></li>
-    <!-- <li class="divider"></li> --->
 </ul>
 
 <nav class="deep-orange lighten" role="navigation">
 
     <div class="nav-wrapper container">
 
-        <a href="index.html" class="brand-logo "> <img src="content/logo_btn.png" height=auto style="max-width:40px"/> </a>
+        <a href="index.html" class="brand-logo my-logo">
+            <img src="content/logo_btn.png" class="my-logo-img"/>
+        </a>
 
         <ul class="right hide-on-med-and-down ">
             <li><a href="search_res.html"><i class="material-icons white-text">search</i></a></li>
@@ -36,7 +37,7 @@
                     class="material-icons right white-text">arrow_drop_down</i></a></li>
         </ul>
 
-        <ul id="nav-mobile" class="side-nav ">
+        <ul id="nav-mobile white-text" class="side-nav ">
             <li><a href="#"> Login or Register</a></li>
         </ul>
 
@@ -62,7 +63,7 @@
 
 
             <div class="input-field white">
-                <label class="label-icon " for="search"> <i class="material-icons blue-grey-text">
+                <label class="label-icon " for="search"> <i class="material-icons blue-grey-text my-search-icon">
                     search</i> </label>
                 <input id="search" type="search" name="series" size="100"
                        placeholder=" What are you currently binging?"/>
