--- a/search_res.html
+++ b/search_res.html
@@ -28,7 +28,9 @@
 
     <div class="nav-wrapper container">
 
-        <a href="index.html" class="brand-logo "> <img src="content/logo_btn.png" height=auto style="max-width:40px"/> </a>
+        <a href="index.html" class="brand-logo">
+            <img src="content/logo_btn.png" class="my-logo-img"/>
+        </a>
 
         <ul class="right hide-on-med-and-down">
             <li><a href="search_res.html"><i class="material-icons white-text">search</i></a></li>
