--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
             <li><a href="#"> Login or Register</a></li>
         </ul>
 
-        <a href="#" data-activates="nav-mobile" class="button-collapse"><i
-                class="material-icons blue-grey-text">menu</i></a>
+        <a href="#" data-activates="nav-mobile" class="button-collapse">
+            <i class="material-icons white-text">menu</i>
+        </a>
+
     </div>
 </nav>
 
@@ -92,14 +94,14 @@
                     <h2 class="center deep-orange-text"><i class="material-icons">search</i></h2>
                     <h5 class="center white-text">Search</h5>
 
-                    <p class=" light white-text">Type in what you are currently binging, and we'll give you suggestions
+                    <p class="light white-text center">Type in what you are currently binging, and we'll give you suggestions
                         on what you should binge next.</p>
                 </div>
             </div>
 
             <div class="col s12 m4">
                 <div class="icon-block">
-                    <h2 class="center deep-orange-text"><i class="material-icons">check_circle</i></h2>
+                    <h2 class="center deep-orange-text center"><i class="material-icons">check_circle</i></h2>
                     <h5 class="center white-text">Choose</h5>
 
                     <p class="light white-text">Choose from the suggestions which show you want to watch next. Trust us,
@@ -112,7 +114,7 @@
                     <h2 class="center deep-orange-text"><i class="material-icons">ondemand_video</i></h2>
                     <h5 class="center white-text">Binge</h5>
 
-                    <p class="light white-text">Head to your favorite streaming service (Netflix, HBO, Amazon etc.) and
+                    <p class="light white-text center">Head to your favorite streaming service (Netflix, HBO, Amazon etc.) and
                         start binging. </p>
                 </div>
             </div>
