--- a/search_res.html
+++ b/search_res.html
@@ -34,21 +34,21 @@
 
         <ul class="right hide-on-med-and-down">
             <li><a href="search_res.html"><i class="material-icons white-text">search</i></a></li>
-            <li><a href="#2"><i class="material-icons white-text">view_module</i></a></li>
-            <!-- <li><a href="#3"><i class="material-icons">refresh</i></a></li> -->
+            <li><a href="#2"> <i class="material-icons white-text">view_module</i></a></li>
             <li>
                 <a class="dropdown-button white-text" href="#" data-activates="dropdown1">Login or Register
                     <i class="material-icons right white-text">arrow_drop_down</i></a></li>
         </ul>
 
+
         <ul id="nav-mobile" class="side-nav">
             <li><a href="#"> Login or Register</a></li>
-            <!--
-            <li> <a href="#"><i class="material-icons">more_vert</i></a></li>
-            -->
         </ul>
-        <a href="#" data-activates="nav-mobile" class="button-collapse"><i
-                class="material-icons blue-grey-text">menu</i></a>
+
+        <a href="#" data-activates="nav-mobile" class="button-collapse">
+            <i class="material-icons white-text">menu</i>
+        </a>
+
     </div>
 </nav>
 
@@ -81,7 +81,7 @@
         <br>
 
         <div class="container center">
-            <a class="brand-logo"> <img src="content/springe.png" height=auto style="max-width:75px"/> </a>
+            <a class="brand-logo"> <img src="content/springe.png" class="my-logo-img-2"/> </a>
 
         </div>
 
